# Orangutan-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.VSCodeCounter/2022-05-05_01-50-34/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
include/: AABBTree.h  Components.h  Config.h  Graphics.h  OgeEntity.h  OgeGame.h  OgeRandom.h  OgeTest.h  Scene.h  SceneGraph.h  SceneManager.h  Timer.h
include/aecs/: BasicView.h  Component.h  Entity.h  FamilyGenerator.h  Registry.h  SparseSet.h
include/components/: Animation.h  Camera.h  Collider.h  Follow.h  Physics.h  Sprite.h  Transform.h
include/math/: OgeMath.h  Ray.h  Rect.h  Vector2f.h
include/systems/: AnimationSystem.h  ScriptSystem.h
src/: AABBTree.cpp  Components.h  Config.h  Graphics.cpp  Graphics.h  InputHandler.cpp  InputHandler.h  OgeEntity.h  OgeGame.cpp  OgeRandom.cpp  OgeTest.cpp  OgeTest.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SystemManager.h  Timer.cpp  Utility.h
src/collision/: AABBTree.cpp  SceneGraph.h
src/components/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Collider.h  Follow.h  Meta.h  Physics.h  Script.h  Sprite.h  Transform.h
src/math/: OgeMath.cpp  OgeMath.h  Ray.cpp  Rect.cpp  Rect.h  Vector2f.cpp
src/sound/: Audio.cpp  Audio.h  SoundEffect.cpp  SoundEffect.h
src/systems/: AnimationSystem.cpp  FollowSystem.cpp  FollowSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  ScriptSystem.cpp
